cmake_minimum_required(VERSION 3.31)
project(cpp_stl_study)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(build)

get_filename_component(VCToolsInstallDir "$ENV{VCToolsInstallDir}" ABSOLUTE)

set(STD_IXX_PATH "${VCToolsInstallDir}/modules/std.ixx")

add_subdirectory(000_boost)
add_subdirectory(001_module)
add_subdirectory(002_iostream)
add_subdirectory(003_move)
add_subdirectory(004_fstream)
add_subdirectory(005_sstream)
add_subdirectory(006_iomanip)
add_subdirectory(007_array)
add_subdirectory(008_vector)
add_subdirectory(009_list)
add_subdirectory(010_forward_list)
add_subdirectory(011_deque)
add_subdirectory(012_stack)
add_subdirectory(013_queue)
add_subdirectory(014_priority_queue)
add_subdirectory(015_set)
add_subdirectory(016_unordered_set)
add_subdirectory(017_map)